[project]
dependencies = [
  "aiohttp>=3.9.0",
]
description = "Commercial-grade Web GUI for ClawLink agent management"
name = "clawlink-visual-gui"
requires-python = ">=3.10"
version = "1.0.0"

[tool.setuptools]
packages = []
py-modules = []

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68.0"]
